--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -9,7 +9,7 @@ header{
     color: var(--blanco);
     background-position: center center;
     background-repeat: no-repeat;
-    background-image: url(../../assets/header.gif);
+    background-image: url(./header.gif);
     background-size: 100%;
     position: absolute;
     top: 0;
