--- a/src/styles/WhoIAm.css
+++ b/src/styles/WhoIAm.css
@@ -34,10 +34,10 @@
     margin-top: 2rem;
 }
 .info-photo{
-    width: 90%;
+    width: 100%;
 }
 .photo{
-    width: 350px;
+    width: 30rem;
 }
 .photo:hover{
     border-radius:50%;
@@ -50,7 +50,17 @@
 .info-text{
     margin-left: 2rem;
 }
-
+.info-text-details{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+}
+@media (max-width:300px) {
+    .photo{
+        width: 100%;
+        margin-left: 0rem;
+    }
+}
 @media (max-width:1080px) {
     .presentation-info{
         flex-direction: column;
@@ -62,6 +72,11 @@
         margin-top: 2rem;
     }
     .photo{
-        margin-left: -2rem;
+        margin-left: 0rem;
+    }
+    .info-text-details{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 10px;
     }
 }
